@@ -1,3 +1,13 @@
+2010-06-18  Alexey Proskuryakov  <ap@apple.com>
+
+        Reviewed by Darin Adler.
+
+        https://bugs.webkit.org/show_bug.cgi?id=40803
+        TestNetscapePlugin has an incorrect implementation of "property" property
+
+        * plugins/embed-property-expected.txt: Added.
+        * plugins/embed-property.html: Added.
+
 2010-06-18  Dan Bernstein  <mitz@apple.com>
 
         Reviewed by Anders Carlsson.
